--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-.direnv
-__pycache__/
 
+/assets/amplified
+/assets/messages
 
-# Added by cargo
-
+# Cargo
 /target
-assets/project-images/transformed
