--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.92"
 bitvec = "1.0.1"
 image = "0.25.4"
 itertools = "0.13.0"
+num = "0.4.3"
 plotters = "0.3.7"
 serde = "1.0.214"
 serde_json = "1.0.132"
